# CarEngine

./: CMakeLists.txt  CarEngine.cbp  CarEngine.layout  README.txt
Metal_Bare_se2abbvc_2K_surface_ms/: se2abbvc.json
Metal_Rusty/: tj1jfgkg.json
src/: Crank.cpp  Crank.h  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Engine.cpp  Engine.h  Engine2D.cpp  Engine2D.h  FileLoader.cpp  FileLoader.h  Piston.cpp  Piston.h  PistonBottom.cpp  PistonBottom.h  Renderer.cpp  Renderer.h  Utilities.cpp  Utilities.h  main.cpp
src/Base/: CanvasObject.cpp  CanvasObject.h  ITransformable.h  Object3D.cpp  Object3D.h  ObjectUI.h  Transform.h
src/Base/3D/: Object3D.cpp  Object3D.h
src/Base/UI/: ObjectUI.cpp  ObjectUI.h  Transform2D.cpp  Transform2D.h
src/Base3DObjects/: Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  ModelLoader.cpp  ModelLoader.h  OpenEndedCylinder.cpp  OpenEndedCylinder.h
src/BaseUIObjects/: Rect.cpp  Rect.h
src/Bitmap/: Bitmap.cpp  Bitmap.h
src/Camera/: Camera.cpp  Camera.h  CameraMovement.cpp  CameraMovement.h
src/Canvas/: gl_canvas2d.cpp  gl_canvas2d.h
src/Managers/: GlobalManager.cpp  GlobalManager.h
src/Rendering/: FlatShader.cpp  FlatShader.h  IShader.cpp  IShader.h  Renderer.cpp  Renderer.h
src/Rendering/Canvas/: gl_canvas2d.cpp  gl_canvas2d.h
src/Rendering/FlatShader/: FlatShader.cpp  FlatShader.h
src/Rendering/GoraudShader/: GoraudShader.cpp  GoraudShader.h
src/Rendering/PhongShader/: PhongShader.cpp  PhongShader.h
src/Slider/: HorizontalSlider.cpp  HorizontalSlider.h
src/Vectors/: Matrix.h  Vector2.h  Vector3.h
